<resources>
    <string name="app_name">StoryApp</string>
    <string name="mystoryapp">MyStoryApp</string>
    <string name="app_logout">App Logout</string>
    <string name="welcome">Welcome,</string>
    <string name="text_btn_register">Sign Up</string>
    <string name="name_user">Fatta Rahmanaufal</string>
    <string name="add_story">Add Story</string>
    <string name="com_google_android_material_appbar_appbarlayout_scrollingviewbehavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="setting_languange">Languange Setting</string>
    <string name="story_detail">Story Detail</string>
    <string name="image_detail">Image Detail</string>
    <string name="sender_name">Fatta Rahmanaufal</string>
    <string name="date_time">18/08/23, 08:15:00</string>
    <string name="descrition_example">Matahari bersinar terik di Lampung. Sinarnya terhalang rimbunnya pepohonan, sehingga hanya menyisakan berkas tipis. Burung-burung berkicau seolah sedang menyanyikan lagu untuk alam.</string>
    <string name="login_title">New Story, Login Now</string>
    <string name="email_user">Your Email</string>
    <string name="your_password">Your Password</string>
    <string name="sign_in">Sign In</string>
    <string name="back_home">Back Home</string>
    <string name="button_sign_in">Sign In</string>
    <string name="button_register">Register</string>
    <string name="tittle_home">Want To Tell Your Story? This is the right place for you</string>
    <string name="register_desc">Register here to upload your stories</string>
    <string name="user_name">Your Name</string>
    <string name="user_email">Email</string>
    <string name="btn_register">Sign Up</string>
    <string name="not_fill">Must Be Fill</string>
    <string name="email_not_valid"> Email Not Valid</string>
    <string name="password_not_valid">Password at least 8 characters</string>
    <string name="hintdescription">Lets, share your story</string>
    <string name="logout_app">Are You Sure Want To Exit</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_yes">Yes</string>
    <string name="sharing">Are you sure want to share?</string>
    <string name="info_register">You Already Registered</string>
    <string name="close_btn">Close</string>
    <string name="dismiss">Close</string>
    <string name="not_found">Your Account Not Found</string>
    <string name="dismiss_succes">Close</string>
    <string name="registration_info">Registration Success!</string>
    <string name="close_dismiss">Close</string>
    <string name="btn_close">Close</string>
    <string name="success">Registration Success!</string>
    <string name="desc_example">Matahari bersinar terik di Lampung. Sinarnya terhalang rimbunnya pepohonan, sehingga hanya menyisakan berkas tipis. Burung-burung berkicau seolah sedang menyanyikan lagu untuk alam</string>
    <string name="time_date">09/20/23, 18:43:00</string>
    <string name="item_name">Fatta Rahmanaufal</string>
    <string name="add_new_story">Add New Story</string>
    <string name="detail_image">Detail Image</string>
    <string name="take_picture">Take Picture</string>
    <string name="upload_image">Upload Image</string>
    <string name="your_description">Your Description</string>
    <string name="send_my_story">Send My Story</string>
    <string name="password_register">Your Password</string>
    <string name="title_activity_story_location">StoryLocationActivity</string>
    <string name="back_to_main">Back to list page</string>
    <string name="default_map">default_map</string>
    <string name="satellite_map">satellite_map</string>
    <string name="terrain_map">terrain_map</string>
    <string name="hybrid_map">hybrid_map</string>
    <string name="my_home">Rumah fatta</string>
    <string name="dummy_desc">Berdua Bersamamu</string>
    <string name="dummy_address">Kabupaten Bekasi, Jawa Barat</string>
    <string name="map_to_detail">Detail</string>
    <string name="info_close_window">Close</string>
    <string name="no_valid_location">Location not found</string>
    <string name="location_story">Location Story</string>
    <string name="using_current_location">Using Current Location</string>
    <string name="search">Search</string>
    <string name="btn_map">Move to map page</string>
    <string name="load_data_error">Load Data Error!</string>
    <string name="retry">Retry</string>
    <string name="upload_success">Your Story Has Been Upload</string>
    <string name="story_picture">Story Picture</string>
    <string name="hintDescription">Lets, share your story @%1$s</string>
    <string name="logout_user">Logout User</string>
    <string name="sender_location">Kabupaten Bekasi, Jawa Barat</string>
</resources>