<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/appBarList"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="#504848"
                app:navigationIcon="@drawable/baseline_keyboard_backspace_24"
                app:subtitle="Fatta Rahmanaufal"
                app:subtitleCentered="true"
                app:subtitleTextColor="@color/black"
                app:title="@string/story_detail"
                app:titleCentered="true"
                app:titleTextColor="@color/black">

            </com.google.android.material.appbar.MaterialToolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/appBar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:paddingBottom="30dp">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/container_rounded"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginHorizontal="16dp"
                    app:cardElevation="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/img_story"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/rounded_image"
                        android:contentDescription="@string/image_detail"
                        android:scaleType="centerCrop"
                        android:src="@drawable/lofi"
                        android:transitionName="ImageStory"
                        android:visibility="visible" />
                </com.google.android.material.card.MaterialCardView>


                <TextView
                    android:id="@+id/tv_sender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="10dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/sender_name"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:transitionName="sender"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/container_rounded" />

                <TextView
                    android:id="@+id/location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/sender_location"
                    android:textSize="14sp"
                    android:transitionName="createdAt"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_sender" />

                <TextView
                    android:id="@+id/created_at"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/date_time"
                    android:textSize="14sp"
                    android:transitionName="createdAt"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_sender" />

                <TextView
                    android:id="@+id/tv_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/descrition_example"
                    android:textSize="16sp"
                    android:transitionName="description"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/created_at" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>