<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/bg_dialog"
    android:paddingTop="30dp"
    android:paddingBottom="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- TODO: Update blank fragment layout -->
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/banner_register"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_rawRes="@raw/error_msg"
        app:lottie_autoPlay="true"
        app:lottie_loop="false"
        />

    <TextView
        android:id="@+id/tv_info_registrasi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout_app"
        android:textAlignment="center"
        android:lineHeight="25sp"
        app:layout_constraintTop_toBottomOf="@id/banner_register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cancel"
        android:background="@drawable/bg_button_upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_cancel"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_info_registrasi"
        app:layout_constraintEnd_toStartOf="@id/btn_yes"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_yes"
        android:background="@drawable/bg_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_yes"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_info_registrasi"
        app:layout_constraintStart_toEndOf="@id/btn_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>