<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/card_view"
    android:layout_height="225dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:layout_marginBottom="16dp"
    android:backgroundTint="#3E3838"
    app:cardElevation="8dp"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/frame_layout"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/image_story"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/lofi"
                android:visibility="visible"
                android:contentDescription="@string/story_picture" />

            <TextView
                android:id="@+id/tv_location"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="Kabupaten Bekasi, Jawa Barat"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:textColor="@color/white"
                android:backgroundTint="#3C3232"
                android:background="@drawable/bg_button_upload"
                android:ellipsize="end"
                android:maxLines="2"/>
        </FrameLayout>


            <ImageView
                android:id="@+id/img_story"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:src="@drawable/lofi"
                android:scaleType="centerCrop"
                android:visibility="visible"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />


        <TextView
            android:id="@+id/tv_sender"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/item_name"
            android:layout_marginStart="20dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/img_story"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp"
            android:maxLines="1"
            android:ellipsize="end"
            />
        <TextView
            android:id="@+id/created_at"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/time_date"
            android:layout_marginEnd="16dp"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:layout_gravity="end"
            app:layout_constraintTop_toBottomOf="@id/img_story"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/tv_sender"
            android:layout_marginTop="10dp"
            android:maxLines="1"
            android:ellipsize="end"
            />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/desc_example"
            android:layout_marginStart="20dp"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/tv_sender"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="5dp"
            android:ellipsize="end"
            android:maxLines="2"
            />



    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>